fixed recipe content-top height .. no jumping by chaning pictures

--- a/RateMyFoodApp/src/app/recipes/recipes.component.css
+++ b/RateMyFoodApp/src/app/recipes/recipes.component.css
@@ -30,6 +30,7 @@ h2 {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
+  height: 300px;
 }
 
 #recipe-intro {
